cmake_minimum_required(VERSION 3.18)
project(core_hello VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Hydra REQUIRED)
add_executable(hello hello.cc)

# We exercise all dependencies to make sure they
# are all installed and exposed as expected
target_link_libraries(hello PRIVATE ZLIB::ZLIB)
if(NOT WIN32 OR CMAKE_SYSTEM_NAME STREQUAL "MSYS")
  target_link_libraries(hello PRIVATE MbedTLS::mbedtls)
endif()
target_link_libraries(hello PRIVATE Nghttp2::nghttp2)
if(NOT WIN32 AND NOT CMAKE_SYSTEM_NAME STREQUAL "MSYS")
  target_link_libraries(hello PRIVATE c-ares::cares)
endif()
target_link_libraries(hello PRIVATE PSL::psl)
target_link_libraries(hello PRIVATE CURL::libcurl)
target_link_libraries(hello PRIVATE CPR::cpr)
